cmake_minimum_required(VERSION 3.21)
project(algorithmStudyReview)

set(CMAKE_CXX_STANDARD 17)

add_executable(algorithmStudyReview main.cpp)

add_executable(785 Chapter1/785.cpp)
add_executable(786 Chapter1/786.cpp)
add_executable(787 Chapter1/787.cpp)
add_executable(788 Chapter1/788.cpp)
add_executable(789 Chapter1/789.cpp)
add_executable(790 Chapter1/790.cpp)
add_executable(791 Chapter1/791.cpp)
add_executable(792 Chapter1/792.cpp)